--- a/examples/List Regions.ipynb
+++ b/examples/List Regions.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "aws_pricing = boto_remora.aws.Ssm(\"twds-se-test\", region_name=\"us-east-1\")\n",
+    "aws_pricing = boto_remora.aws.Ssm(\"test-account\", region_name=\"us-east-1\")\n",
     "aws_region_names = aws_pricing.get_regions()\n",
     "pprint(aws_region_names)"
    ],
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "aws_ec2 = boto_remora.aws.Ec2(\"twds-se-test\", region_name=\"us-east-1\")\n",
+    "aws_ec2 = boto_remora.aws.Ec2(\"test-account\", region_name=\"us-east-1\")\n",
     "pprint(aws_ec2.available_regions)"
    ],
    "metadata": {
