--- a/examples/pricing.ipynb
+++ b/examples/pricing.ipynb
@@ -35,9 +35,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "import boto_remora"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -66,7 +64,7 @@
     }
    ],
    "source": [
-    "aws_pricing = boto_remora.aws.Pricing(\"twds-legacy\")"
+    "aws_pricing = boto_remora.aws.Pricing(\"test-account\")"
    ]
   },
   {
@@ -324,6 +322,15 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
