updated example list regions to be more accurate

--- a/examples/List Regions.ipynb
+++ b/examples/List Regions.ipynb
@@ -125,25 +125,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'ap-northeast-1': 'Asia Pacific (Tokyo)',\n 'ap-northeast-2': 'Asia Pacific (Seoul)',\n 'ap-south-1': 'Asia Pacific (Mumbai)',\n 'ap-southeast-1': 'Asia Pacific (Singapore)',\n 'ap-southeast-2': 'Asia Pacific (Sydney)',\n 'ca-central-1': 'Canada (Central)',\n 'eu-central-1': 'EU (Frankfurt)',\n 'eu-north-1': 'EU (Stockholm)',\n 'eu-west-1': 'EU (Ireland)',\n 'eu-west-2': 'EU (London)',\n 'eu-west-3': 'EU (Paris)',\n 'sa-east-1': 'South America (Sao Paulo)',\n 'us-east-1': 'US East (N. Virginia)',\n 'us-east-2': 'US East (Ohio)',\n 'us-west-1': 'US West (N. California)',\n 'us-west-2': 'US West (Oregon)'}"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 9
-    }
-   ],
+   "execution_count": 14,
+   "outputs": [],
    "source": [
-    "dict(filter(lambda name: name[0] in aws_ec2.available_regions, aws_region_names.items()))\n"
+    "# A map is used instead of a filter to prevent accidentally skipping an available region\n",
+    "ec2_region_names = dict(map(lambda name: (name, aws_region_names.get(name)), aws_ec2.available_regions))\n",
+    "\n",
+    "if not all(ec2_region_names):\n",
+    "    logging.error(\"Missing names for: %s\", set(dict(filter(lambda name: name[1], ec2_region_names.items()))))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
