--- a/examples/List Regions.ipynb
+++ b/examples/List Regions.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import logging\n",
@@ -23,12 +23,15 @@
     "\n",
     "import boto_remora\n",
     "\n",
-    "logging.basicConfig(level=logging.INFO)"
+    "logging.basicConfig(level=logging.INFO)\n",
+    "\n",
+    "PROFILE_NAME = \"test-account\""
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
     }
    }
   },
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
@@ -62,7 +65,7 @@
     }
    ],
    "source": [
-    "aws_pricing = boto_remora.aws.Ssm(\"test-account\", region_name=\"us-east-1\")\n",
+    "aws_pricing = boto_remora.aws.Ssm(PROFILE_NAME, region_name=\"us-east-1\")\n",
     "aws_region_names = aws_pricing.get_regions()\n",
     "pprint(aws_region_names)"
    ],
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stderr",
@@ -103,7 +106,7 @@
     }
    ],
    "source": [
-    "aws_ec2 = boto_remora.aws.Ec2(\"test-account\", region_name=\"us-east-1\")\n",
+    "aws_ec2 = boto_remora.aws.Ec2(PROFILE_NAME, region_name=\"us-east-1\")\n",
     "pprint(aws_ec2.available_regions)"
    ],
    "metadata": {
@@ -125,34 +128,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "{'ap-northeast-1': 'Asia Pacific (Tokyo)',\n 'ap-northeast-2': 'Asia Pacific (Seoul)',\n 'ap-south-1': 'Asia Pacific (Mumbai)',\n 'ap-southeast-1': 'Asia Pacific (Singapore)',\n 'ap-southeast-2': 'Asia Pacific (Sydney)',\n 'ca-central-1': 'Canada (Central)',\n 'eu-central-1': 'EU (Frankfurt)',\n 'eu-north-1': 'EU (Stockholm)',\n 'eu-west-1': 'EU (Ireland)',\n 'eu-west-2': 'EU (London)',\n 'eu-west-3': 'EU (Paris)',\n 'sa-east-1': 'South America (Sao Paulo)',\n 'us-east-1': 'US East (N. Virginia)',\n 'us-east-2': 'US East (Ohio)',\n 'us-west-1': 'US West (N. California)',\n 'us-west-2': 'US West (Oregon)'}\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "# A map is used instead of a filter to prevent accidentally skipping an available region\n",
     "ec2_region_names = dict(map(lambda name: (name, aws_region_names.get(name)), aws_ec2.available_regions))\n",
     "\n",
     "if not all(ec2_region_names):\n",
-    "    logging.error(\"Missing names for: %s\", set(dict(filter(lambda name: name[1], ec2_region_names.items()))))"
+    "    logging.error(\"Missing names for: %s\", set(dict(filter(lambda name: name[1], ec2_region_names.items()))))\n",
+    "\n",
+    "pprint(ec2_region_names)\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
     }
    }
   }
